--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,19 @@
 *.pyc
 *.jl
+*OA_Con/
+*\.DS_Store
+*.swp
+*OA/
+*Sea/
+*karger/
+*karger_2/
+*oecd_data/
+*tmp/
+*web/
+*wiley_dir/
+*wiley_new_dir/
+*workdir/
+worldbank_pdf_link
+*xml_result.bak/
+*xml_result.scielo/
+*xml_result/
